Fix vox focus indicator in app list folder

Changes:
|contents_view_| in AppListFolderView applies transform. When the
transform is updated, the locations of view nodes are not updated
automatically. So manually notify the updates.

Bug: 921191
Change-Id: I474fc7a0fb9a81403b0cee36e5583716d33d6cdf
Reviewed-on: https://chromium-review.googlesource.com/c/1427441
Reviewed-by: Alex Newcomer <newcomer@chromium.org>
Commit-Queue: Weidong Guo <weidongg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#624926}
Former-commit-id: 211b2150ec4cdceedcc59facdb3210778582a277