ash/app_list/views/app_list_folder_view.cc
@@ -410,6 +410,8 @@ class ContentsContainerAnimation : public AppListFolderView::Animation,
     // preferred bounds is calculated correctly.
     folder_view_->contents_container()->layer()->SetTransform(gfx::Transform());
     folder_view_->RecordAnimationSmoothness();
+
+    folder_view_->NotifyAccessibilityLocationChanges();
   }
 
  private:
@@ -655,6 +657,17 @@ void AppListFolderView::UpdateBackgroundMask(int corner_radius,
   background_mask_->layer()->SetFillsBoundsOpaquely(false);
   background_mask_->layer()->SetBounds(background_view_->GetContentsBounds());
   background_view_->layer()->SetMaskLayer(background_mask_->layer());
+}
+
+void AppListFolderView::NotifyAccessibilityLocationChanges() {
+  contents_container_->NotifyAccessibilityEvent(
+      ax::mojom::Event::kLocationChanged, true);
+  items_grid_view_->NotifyAccessibilityEvent(ax::mojom::Event::kLocationChanged,
+                                             true);
+  folder_header_view_->NotifyAccessibilityEvent(
+      ax::mojom::Event::kLocationChanged, true);
+  page_switcher_->NotifyAccessibilityEvent(ax::mojom::Event::kLocationChanged,
+                                           true);
 }
 
 void AppListFolderView::CalculateIdealBounds() {
